# Generative_AI

Streaming_FastAPI_OpenAI/: compose.yml
Streaming_FastAPI_OpenAI/streaming_fastapi/: env_backup
Streaming_FastAPI_OpenAI/streaming_fastapi/app/: main.py
class_1/: compose.yml
class_1/code/: README.md  poetry_command_01.sh  poetry_commands_01.txt  poetry_commands_02.txt  pyproject.toml
class_1/code/.ipynb_checkpoints/: Dockerfile-checkpoint
class_1/code/microservice_01/: main.ipynb
class_2/code/: Dockerfile  poetry_command_02.sh
class_2/code/microservice_01/: hello_world.ipynb  multiple_rules.ipynb
class_2/code/microservice_01/.ipynb_checkpoints/: main-checkpoint.ipynb
